--- a/system/config/templates/features/enroll_app/hbx_admin_config.yml
+++ b/system/config/templates/features/enroll_app/hbx_admin_config.yml
@@ -14,17 +14,17 @@ registry:
         - key: :inbox_tab
           is_enabled: true
         - key: :notices_tab
-          is_enabled: true
-        - key: :calendar_tab
-          is_enabled: true
-        - key: :staff_tab
-          is_enabled: true
-        - key: :orphan_accounts_tab
-          is_enabled: true
-        - key: :no_transition_families
-          is_enabled: true
-        - key: :drop_enrollment_members
           is_enabled: false
+        - key: :calendar_tab
+          is_enabled: false
+        - key: :staff_tab
+          is_enabled: false
+        - key: :orphan_accounts_tab
+          is_enabled: false
+        - key: :no_transition_families
+          is_enabled: false
+        - key: :drop_enrollment_members
+          is_enabled: <%= ENV['DROP_ENROLLMENT_FEATURE_IS_ENABLED'] || true %>
         - key: :drop_retro_scenario
           is_enabled: <%= ENV['RETRO_FEATURE_IS_ENABLED'] || false %>
         - key: :resend_broker_email_button
