--- a/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -38,16 +38,16 @@ registry:
           - key: :fifteenth_of_the_month
             item: 15
       - key: :fifteenth_of_the_month_rule_overridden
-        is_enabled: false
+        is_enabled: true
       - key: :aca_individual_osse_aptc_minimum
         is_enabled: <%= ENV['ACA_INDIVIDUAL_OSSE_APTC_MINIMUM'] || false %>
       - key: :aca_individual_assistance_benefits
         is_enabled: true
         settings:
           - key: :default_applied_aptc_percentage
-            item: 0.85
+            item: 1
           - key: :minimum_applied_aptc_percentage_for_osse
-            item: 0.85
+            item: 0
       - key: :cancel_renewals_for_term
         item: Operations::Individual::CancelRenewalEnrollment.new
         is_enabled: <%= ENV['CANCEL_RENEWALS_FOR_TERM_IS_ENABLED'] || false %>
@@ -74,7 +74,7 @@ registry:
                     "I-20 (Certificate of Eligibility for Nonimmigrant (F-1) Student Status)", "DS2019 (Certificate of Eligibility for Exchange Visitor (J-1) Status)",
                     "Other (With Alien Number)", "Other (With I-94 Number)" ]
       - key: :indian_alaskan_tribe_details
-        is_enabled: false
+        is_enabled: true
       - key: :check_for_crm_updates
         is_enabled: <%= ENV['CHECK_FOR_CRM_UPDATES_IS_ENABLED'] || false %>
       - key: :prior_plan_year_ivl_sep
@@ -82,37 +82,40 @@ registry:
       - key: :admin_ivl_end_date_changes
         is_enabled: <%= ENV['ADMIN_IVL_END_DATE_CHANGES_IS_ENABLED'] || false %>
       - key: :display_external_id_in_family_datatable
-        is_enabled: :false
-      - key: :contact_method_via_dropdown
         is_enabled: :true
+      - key: :contact_method_via_dropdown
+        is_enabled: :false
       - key: :state_based_language_preferences
-        item: ["English", "Amharic", "Spanish"]
+        item: ["English", "Spanish", "French", "Chinese (Mandarin)", "Arabic",
+             "Kirundi", "Lingala", "Somali", "Swahili", "Portuguese", "Vietnamese", "Khmer",
+             "Thai", "Tagalog", "Russian", "German"]
         is_enabled: true
       - key: :gate_enrollments_to_edidb_for_year
-        is_enabled: false
+        is_enabled: true
         settings:
           - key: :year
             item: 2021
       - key: :include_external_enrollment_in_display_all_enrollments
-        is_enabled: :false
+        is_enabled: :true
       - key: :extended_aptc_individual_agreement_message
         item: :extended_aptc_individual_agreement_message
-        is_enabled: false
+        is_enabled: true
       - key: :application_type_options
-        item: ["Phone", "Paper", "Curam", "Mobile"]
+        item: ["Phone", "Paper", "State Medicaid Agency"]
         is_enabled: true
       - key: :curam_application_type
-        item: "Curam"
+        item: "State Medicaid Agency"
         is_enabled: true
       - key: :verification_reasons
-        item: ["Document in EnrollApp", "Document in DIMS", "SAVE system", "E-Verified in Curam", "Salesforce", "Self-Attestation"]
+        item: ["Document in EnrollApp", "Electronic data source", "State Medicaid Agency",
+                "CRM Document Management System", "Self-Attestation"]
         is_enabled: true
       - key: :total_minimum_responsibility
-        is_enabled: false
-      - key: :display_ivl_termination_reason
-        is_enabled: false
-      - key: :reinstate_nonpayment_ivl_enrollment
         is_enabled: true
+      - key: :display_ivl_termination_reason
+        is_enabled: true
+      - key: :reinstate_nonpayment_ivl_enrollment
+        is_enabled: false
       - key: :qhp_product_for_include_aca_individual
         is_enabled: <%= ENV['QHP_PRODUCT_FOR_INCLUDE_ACA_INDIVIDUAL_IS_ENABLED'] || false %>
       - key: :display_you_pay
@@ -142,7 +145,7 @@ registry:
           - key: :month
             item: 1
           - key: :day
-            item: 31
+            item: 15
           - key: :year_offset
             item: 0
       - key: :create_bcp_on_date_change
