--- a/system/config/templates/features/brokers/brokers.yml
+++ b/system/config/templates/features/brokers/brokers.yml
@@ -14,21 +14,21 @@ registry:
           is_visible: true
         settings:
           - key: :carrier_appointments
-            item: {"Aetna Health Inc": => nil, "Aetna Life Insurance Company": => nil, "Carefirst Bluechoice Inc": => nil, "Group Hospitalization and Medical Services Inc": => nil, "Kaiser Foundation": => nil, "Optimum Choice": => nil, "United Health Care Insurance": => nil, "United Health Care Mid Atlantic": => nil}
+            item: {"Anthem Blue Cross and Blue Shield": nil, "Community Health Options": nil, "Harvard Pilgrim Health Care":  nil, "Northeast Delta Dental": nil, "Renaissance Dental": nil} # Should be a hash with the carrier name as a string and the value as nil
       - key: :broker_attestation_fields
         item: :broker_attestation_fields
-        is_enabled: false
+        is_enabled: true
       - key: :allow_alphanumeric_npn
         item: :allow_alphanumeric_npn
-        is_enabled: false
+        is_enabled: true
       - key: :broker_training_link
         is_enabled: true
-        item: ""
+        item: "https://coverme.inquisiqlms.com/"
       - key: :allow_edit_broker_email
         is_enabled: <%= ENV['ALLOW_EDIT_BROKER_EMAIL_IS_ENABLED'] || false %>
       - key: :allow_edit_broker_npn
         is_enabled: <%= ENV['ALLOW_EDIT_BROKER_NPN_IS_ENABLED'] || false %>
       - key: :send_broker_hired_event_to_edi
-        is_enabled: <%= ENV['BROKER_HIRED_EVENT_TO_EDI_IS_ENABLED'] || false %>
+        is_enabled: <%= ENV['BROKER_HIRED_EVENT_TO_EDI_IS_ENABLED'] || true %>
       - key: :send_broker_fired_event_to_edi
-        is_enabled: <%= ENV['BROKER_FIRED_EVENT_TO_EDI_IS_ENABLED'] || false %>
+        is_enabled: <%= ENV['BROKER_FIRED_EVENT_TO_EDI_IS_ENABLED'] || true %>
