--- a/config/client_config/me/system/config/templates/features/aca_individual_market/eligibilities.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/eligibilities.yml
@@ -176,7 +176,7 @@ registry:
         is_enabled: true
         settings:
           - key: :offset_prior_to_due_date
-            item: 65
+            item: <%= ENV['DR2_DUE_DATE_OFFSET'] || 70 %>
           - key: :units
             item: :days
           - key: :event_name
