--- a/system/config/templates/features/enroll_app/css.yml
+++ b/system/config/templates/features/enroll_app/css.yml
@@ -4,15 +4,12 @@ registry:
       - :css_components
     features:
       - key: :custom_email_templates
-        is_enabled: true
-        settings:
-          - key: :email_template
-            item: "email_template"
+        is_enabled: false
       - key: :selectric_hover
         is_enabled: true
         settings:
           - key: :color
-            item: '#007bc4'
+            item: '#487ba2'
       - key: :qle_carousel
         is_enabled: true
         settings:
@@ -137,4 +134,4 @@ registry:
         is_enabled: true
         settings:
           - key: :color
-            item: "#454545"
+            item: "#333"
