--- a/system/config/templates/features/enroll_app/sep_types.yml
+++ b/system/config/templates/features/enroll_app/sep_types.yml
@@ -75,7 +75,7 @@ registry:
             meta:
               label: Market *
               content_type: :radio_select
-              enum: [{individual: "Individual"}]
+              enum: [{individual: "Individual"}, {shop: "SHOP"}, {fehb: "Congress"}]
               default: :individual
               description: ''
               is_required: true
@@ -130,9 +130,7 @@ registry:
               {first_of_next_month_reporting: First of Month after Reporting},
               {first_of_month: 15th of the Month},
               {first_of_next_month_coinciding: First of Next Month (Coinciding)},
-              {first_of_next_month_plan_selection: First of Next Month (Plan Selection)},
-              {first_of_the_month_plan_shopping: First of the Month (Plan Shopping)},
-              {first_of_the_month_coinciding: First of the Month (Coinciding)}]
+              {first_of_next_month_plan_selection: First of Next Month (Plan Selection)}]
               content_type: :checkbox_select
               default: ''
               description: ''
@@ -228,6 +226,6 @@ registry:
       - key: :sort_sep_type
         item: Operations::QualifyingLifeEventKind::Sort.new
         is_enabled: true
-      - key: :sep_effective_date_match 
+      - key: :sep_effective_date_match
         item: :sep_effective_date_match
-        is_enabled: false
+        is_enabled: true
