--- a/system/config/templates/features/enroll_app/fdsh_services.yml
+++ b/system/config/templates/features/enroll_app/fdsh_services.yml
@@ -6,7 +6,7 @@ registry:
       - key: :ridp_h139
         is_enabled: true
       - key: :paper_application_verification
-        is_enabled: false
+        is_enabled: true
       - key: :vlp_h92
         is_enabled: true
       - key: :ssa_h3
@@ -16,7 +16,7 @@ registry:
           item:  <%= ENV['SSA_H3_PAYLOAD_TYPE'] || "xml" %>
       - key: :renewal_eligibility_verification_using_rrv
         item: :renewal_eligibility_verification_using_rrv
-        is_enabled: <%= ENV['RENEWAL_ELIGIBILITY_VERIFICATION_USING_RRV_IS_ENABLED'] || true %>
+        is_enabled: <%= ENV['RENEWAL_ELIGIBILITY_VERIFICATION_USING_RRV_IS_ENABLED'] || false %>
       - key: :validate_and_record_publish_errors
         is_enabled: <%= ENV['VALIDATE_AND_RECORD_PUBLISH_ERRORS_IS_ENABLED'] || false %>
       - key: :validate_and_record_publish_application_errors
