--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -320,7 +320,7 @@ jobs:
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v2
         with:
-          name: coverage-report-${{ matrix.group }}-${{ strategy.job-total }}
+          name: code-coverage
           path: ${{ github.workspace }}/coverage/${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
   cucumber:
     runs-on: ubuntu-latest
@@ -445,6 +445,10 @@ jobs:
           CHECK: ${{ matrix.check }}
         if: needs[env.CHECK].result != 'success'
         run: exit 1
+      - name: Download code coverage artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage      
       - name: Code Coverage Summary
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
