--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -448,7 +448,13 @@ jobs:
       - name: Download code coverage artifact
         uses: actions/download-artifact@v3
         with:
-          name: code-coverage      
+          name: code-coverage
+          path: coverage
+      - name: Display structure of downloaded files
+        run: ls -R
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: coverage
       - name: Code Coverage Summary
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
