disabling coverage for cucumber for now

--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -432,14 +432,14 @@ jobs:
         env:
           COVERAGE: 'true'
         run: cucumber_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
-      - name: copy coverage report
-        run: |
-          cp coverage/coverage.xml ${{ github.workspace }}/coverage/cuke-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
-      - name: Upload coverage artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: code-coverage
-          path: ${{ github.workspace }}/coverage/cuke-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+      # - name: copy coverage report
+      #   run: |
+      #     cp coverage/coverage.xml ${{ github.workspace }}/coverage/cuke-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+      # - name: Upload coverage artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: code-coverage
+      #     path: ${{ github.workspace }}/coverage/cuke-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
 
   quality-workbench:
     needs: [engines, benefit-sponsors, rspec, cucumber]
