--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -474,6 +474,7 @@ jobs:
           badge: true
           format: 'markdown'
           output: both
+          hide_branch_rate: true
       - name: Write to Job Summary
         run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
 
