disable class documentation cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -108,9 +108,8 @@ Style/AndOr:
 Style/BlockComments:
   Enabled: false
 
-# We will want to turn this back on or customize it more fully
 Style/Documentation:
-  Enabled: true
+  Enabled: false
 
 Style/EachWithObject:
   Enabled: false
