--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -133,12 +133,22 @@ jobs:
           bundle config path vendor/bundle
           NODE_ENV=test RAILS_ENV=test ./bin/webpack
       - name: test engine
+        env:
+          COVERAGE: 'true'
         run: |
           root=`pwd -P`
           echo $root/components/${{ matrix.engine-name }}
           cd $root/components/${{ matrix.engine-name }}
           bundle config path ../../vendor/bundle
           bundle exec rspec
+      - name: copy coverage report
+        run: |
+          cp coverage/coverage.xml ${{ github.workspace }}/coverage/engines-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage
+          path: ${{ github.workspace }}/coverage/engines-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
   benefit-sponsors:
     runs-on: ubuntu-20.04
     services:
@@ -219,10 +229,19 @@ jobs:
       - name: test engine
         env:
           RSPEC_SPLIT_CONFIGURATION_PATH: '${{ github.workspace }}/ci/benefit_sponsors-split-config.json'
+          COVERAGE: 'true'
         run: |
           cd components/benefit_sponsors
           bundle config path ../../vendor/bundle
           rspec_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
+      - name: copy coverage report
+        run: |
+          cp coverage/coverage.xml ${{ github.workspace }}/coverage/bs-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage
+          path: ${{ github.workspace }}/coverage/bs-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
   rspec:
     runs-on: ubuntu-latest
     services:
