copy the badge to a branch

--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -517,4 +517,14 @@ jobs:
           path: coveragereport/*
       - name: Write to Job Summary
         run: cat coveragereport/SummaryGithub.md >> $GITHUB_STEP_SUMMARY
+      - name: copy coverage badge
+        run: |
+          mkdir coverage-badge
+          cp coveragereport/badge_linecoverage.svg coverage-badge/
+      - name: Publish coverage badge to coverage-badge branch
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: coverage-artifacts
+          folder: coverage-badge/
+
 
