census employee roster bulk upload (#2965)
* roster census employee bulk upload

* adding test cases

* fixing rubocop issues

* adding setting to components benefit sponsors namespace

* adding a helper method to dummy aca_helper

---------

Co-authored-by: TonyHasIdeas <118292503+TonyHasIdeas@users.noreply.github.com>

--- a/config/client_config/dc/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/config/client_config/dc/system/config/templates/features/enroll_app/enroll_app.yml
@@ -421,6 +421,9 @@ registry:
         is_enabled: <%= ENV['ELIGIBILITY_AUDIT_LOG_IS_ENABLED'] || false %>
       - key: :notify_address_changed
         is_enabled: <%= ENV['NOTIFY_ADDRESS_CHANGED_IS_ENABLED'] || false %>
+      - key: :ce_roster_bulk_upload
+        item: :ce_roster_bulk_upload
+        is_enabled: <%= ENV['CE_ROSTER_BULK_UPLOAD_ENABLED'] || false %>
   - namespace:
       - :pay_now_feature
     features:
