--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -133,12 +133,24 @@ jobs:
           bundle config path vendor/bundle
           NODE_ENV=test RAILS_ENV=test ./bin/webpack
       - name: test engine
+        env:
+          COVERAGE: 'true'
         run: |
           root=`pwd -P`
           echo $root/components/${{ matrix.engine-name }}
           cd $root/components/${{ matrix.engine-name }}
           bundle config path ../../vendor/bundle
           bundle exec rspec
+      - name: copy coverage report
+        run: |
+          root=`pwd -P`
+          cd $root/components/${{ matrix.engine-name }}
+          cp coverage/coverage.xml ${{ github.workspace }}/engines-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage
+          path: ${{ github.workspace }}/engines-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
   benefit-sponsors:
     runs-on: ubuntu-20.04
     services:
@@ -219,10 +231,20 @@ jobs:
       - name: test engine
         env:
           RSPEC_SPLIT_CONFIGURATION_PATH: '${{ github.workspace }}/ci/benefit_sponsors-split-config.json'
+          COVERAGE: 'true'
         run: |
           cd components/benefit_sponsors
           bundle config path ../../vendor/bundle
           rspec_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
+      - name: copy coverage report
+        run: |
+          cd components/benefit_sponsors
+          cp coverage/coverage.xml ${{ github.workspace }}/bs-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage
+          path: ${{ github.workspace }}/bs-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
   rspec:
     runs-on: ubuntu-latest
     services:
@@ -310,9 +332,18 @@ jobs:
         run: yarn install
       - name: Run tests
         env:
+          COVERAGE: 'true'
           RSPEC_SPLIT_CONFIGURATION_PATH: 'ci/rspec-split-config.json'
           TEST_BOOSTERS_RSPEC_TEST_FILE_PATTERN: '{spec,components/benefit_markets,components/benefit_sponsors,components/financial_assistance,components/notifier,components/sponsored_benefits,components/transport_gateway,components/transport_profiles}/**/*_spec.rb'
         run: rspec_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
+      - name: copy coverage report
+        run: |
+          cp coverage/coverage.xml ${{ github.workspace }}/coverage/${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage
+          path: ${{ github.workspace }}/coverage/${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
   cucumber:
     runs-on: ubuntu-latest
     services:
@@ -420,7 +451,17 @@ jobs:
         if: steps.npm-cache.outputs.cache-hit != 'true'
         run: yarn install
       - name: Run tests
+        env:
+          COVERAGE: 'true'
         run: cucumber_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
+      - name: copy coverage report
+        run: |
+          cp coverage/coverage.xml ${{ github.workspace }}/coverage/cukes-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage
+          path: ${{ github.workspace }}/coverage/cukes-${{ matrix.group }}_${{ strategy.job-total }}_coverage.xml
   quality-workbench:
     needs: [engines, benefit-sponsors, rspec, cucumber]
     if: always()
@@ -434,3 +475,46 @@ jobs:
           CHECK: ${{ matrix.check }}
         if: needs[env.CHECK].result != 'success'
         run: exit 1
+  code-coverage-summary:
+    needs: [rspec, cucumber]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download code coverage artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage
+          path: coverage
+      - name: Setup .NET Core # Required to execute ReportGenerator
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 6.x
+          dotnet-quality: 'ga'
+      - name: ReportGenerator
+        uses: danielpalme/ReportGenerator-GitHub-Action@5.1.24
+        with:
+          reports: coverage/*.xml
+          targetdir: coveragereport
+          reporttypes: HtmlInline;MarkdownSummary;MarkdownSummaryGithub;Badges
+      - name: Display structure of downloaded files
+        run: ls -R
+      - name: Upload coverage report artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-report
+          path: coveragereport/*
+      - name: Write to Job Summary
+        run: cat coveragereport/SummaryGithub.md >> $GITHUB_STEP_SUMMARY
+      - name: copy coverage badge
+        if: (github.event_name == 'push') && (github.ref == 'refs/heads/trunk')
+        run: |
+          mkdir coverage-save
+          cp coveragereport/badge_linecoverage.svg coverage-save/
+      - name: Publish coverage badge to coverage-badge branch
+        if: (github.event_name == 'push') && (github.ref == 'refs/heads/trunk')
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: coverage-artifacts
+          folder: coverage-save/
+
+
