--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -914,3 +914,6 @@ registry:
       - key: :back_to_account_all_shop
         item: :back_to_account_all_shop
         is_enabled: <%= ENV['BACK_TO_ACCOUNT_ALL_SHOP_IS_ENABLED'] || false %>
+      - key: :indian_alaskan_tribe_codes
+        item: :indian_alaskan_tribe_codes
+        is_enabled: <%= ENV['INDIAN_ALASKAN_TRIBE_CODES_IS_ENABLED'] || false %>
