--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -917,3 +917,6 @@ registry:
       - key: :indian_alaskan_tribe_codes
         item: :indian_alaskan_tribe_codes
         is_enabled: <%= ENV['INDIAN_ALASKAN_TRIBE_CODES_IS_ENABLED'] || false %>
+      - key: :oeg_notice_income_verification_only
+        item: :oeg_notice_income_verification_only
+        is_enabled: <%= ENV['OEG_NOTICE_INCOME_VERIFICATION_ONLY_IS_ENABLED'] || false %>
