add DR2_DUE_DATE_OFFSET env variable in dc config

--- a/config/client_config/dc/system/config/templates/features/aca_individual_market/eligibilities.yml
+++ b/config/client_config/dc/system/config/templates/features/aca_individual_market/eligibilities.yml
@@ -179,7 +179,7 @@ registry:
         is_enabled: true
         settings:
           - key: :offset_prior_to_due_date
-            item: 70
+            item: <%= ENV['DR2_DUE_DATE_OFFSET'] || 70 %>
           - key: :units
             item: :days
           - key: :event_name
