--- a/config/client_config/dc/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/config/client_config/dc/system/config/templates/features/enroll_app/enroll_app.yml
@@ -392,7 +392,7 @@ registry:
         is_enabled: true
         settings:
           - key: :ivl_enrollment_renewal_begin_effective_day
-            item: 1
+            item: <%= ENV['IVL_ENROLLMENT_RENEWAL_BEGIN_EFFECTIVE_DAY'] || 1 %>
           - key: :ivl_enrollment_renewal_begin_effective_month
             item: <%= ENV['IVL_ENROLLMENT_RENEWAL_BEGIN_EFFECTIVE_MONTH'] || 11 %>
       - key: :exclude_child_only_offering
