--- a/config/client_config/me/system/config/templates/features/aca_individual_market/financial_assistance.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/financial_assistance.yml
@@ -295,6 +295,11 @@ registry:
       settings:
         - key: :name
           item: "MaineCare or Cub Care"
+    - key: :medicaid_or_chip_program_long_name
+      is_enabled: true
+      settings:
+        - key: :name
+          item: "MaineCare (Medicaid)"
     - key: :medicaid_or_chip_agency_long_name
       is_enabled: true
       settings:
