--- a/config/client_config/dc/system/config/templates/features/aca_individual_market/financial_assistance.yml
+++ b/config/client_config/dc/system/config/templates/features/aca_individual_market/financial_assistance.yml
@@ -298,12 +298,12 @@ registry:
       is_enabled: true
       settings:
         - key: :name
-          item: 'Medicaid'
+          item: "Medicaid"
     - key: :medicaid_or_chip_program_long_name
       is_enabled: true
       settings:
         - key: :name
-          item: 'Medicaid'
+          item: "Medicaid"
     - key: :medicaid_or_chip_agency_long_name
       is_enabled: true
       settings:
