--- a/config/client_config/me/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/config/client_config/me/system/config/templates/features/enroll_app/enroll_app.yml
@@ -423,7 +423,7 @@ registry:
           - key: :connect_test
             item: <%= ENV['KAISER_PERMANENTE_PAY_NOW_CONNECT_TEST_IS_ENABLED'] || false %>
           - key: :generic_url
-            item: <%= ENV['KAISER_PERMANENTE_PAY_NOW_GENERIC_URL'] || "https://kp.org" %>
+            item: <%= ENV['KAISER_PERMANENTE_PAY_NOW_GENERIC_URL'] || "https://kp.org/paypremium" %>
       - key: :kaiser_pay_now
         is_enabled: <%= ENV['KAISER_PERMANENTE_PAY_NOW_IS_ENABLED'] || false %>
         settings:
